--- a/resources.html
+++ b/resources.html
@@ -25,10 +25,10 @@
                 <button><i class="fa-solid fa-bars fa-2x"></i></button>
                 <div class="grid navbar">
                   <ul class="nav-list grid">
-                    <li class="nav-item"><a class="activ" href="index.html">Product</a></li>
+                    <li class="nav-item"><a href="index.html">Product</a></li>
                     <li class="nav-item"><a href="customers.html">Customers</a></li>
                     <li class="nav-item"><a href="pricing.html">Pricing</a></li>
-                    <li class="nav-item"><a href="resources.html">Resources</a></li>
+                    <li class="nav-item"><a class="activ"  href="resources.html">Resources</a></li>
                   </ul>
                   <div class="sign">
                     <div class="buttons">
